chore (html): ✨update index

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </style>
 </head>
 <body>
-    <h1>PAAS and IAAS services</h1>
+    <h1>Platform-as-a-Service (PaaS) applications deployed via GitHub Actions using continuous integration and continuous deployment (CI/CD) pipelines</h1>
     
     <div class="container">
         <!-- Fila 1 -->
