chore (html): ✨update index

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <img src="heroku.png" alt="Heroku" class="card-image" onerror="this.src='https://via.placeholder.com/400x200?text=Heroku'">
             <div class="card-content">
                 <h3 class="card-title">Heroku</h3>
-                <a href="https://pokemon-railway-production.up.railway.app/" class="btn" target="_blank">Access</a>
+                <a href="https://pokemon-ga-devops-ac9261b8140c.herokuapp.com/" class="btn" target="_blank">Access</a>
             </div>
         </div>
         
